# rust_api_server

./: Cargo.toml
src/: main.rs  utils.rs
src/controllers/: auth.rs
src/models/: auth.rs
